:bug: overflow

--- a/_sass/partials/mediaqueries.scss
+++ b/_sass/partials/mediaqueries.scss
@@ -90,6 +90,7 @@
       margin: 0;
       width: 100vw;
       margin-left: -4rem;
+      overflow: hidden;
 
       &::before {
         left: 0%;
